exports[`Collection should render a collection page; even if the \`actions\` are missing 1`] = `
<div
  className="collection-display">
  <h2
    className="heading--primary">
    Resources
  </h2>
  <p>
    No more 
    Resources
     to show.
  </p>
  <noscript />
</div>
`;

exports[`Collection should render a collection page; with no errors 1`] = `
<div
  className="collection-display">
  <h2
    className="heading--primary">
    Resources
  </h2>
  <a
    className="btn btn--primary mrl"
    href="http://foo.bar/baz/new"
    onClick={[Function]}
    title="Foo Bar Baz">
    Foo Bar Baz
  </a>
  <p>
    No more 
    Resources
     to show.
  </p>
  <noscript />
</div>
`;
